2008-02-02 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/DataViews/GrampletView.py
	* src/ReportBase/_ReportUtils.py
	* src/gen/proxy/private.py
	* src/plugins/WebCal.py
	* src/plugins/CmdRef.py
	* src/Models/_ListCursor.py
	* src/Models/_PathCursor.py
	PEP 8 fixes. Change 
	if var == True --> if var 
	if var is True --> if var
	if var == False --> if not var
	if var == None --> if var is None

2008-02-04 Jerome Rapinat <romjerome@yahoo.fr>
	* data/man/fr/gramps.1.in: update

2008-02-03 Gary Burton <gary.burton@zen.co.uk>
	* src/gen/db/base.py: Functions using the pop function expect a return
	value. Bug #1632

2008-02-02 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ExportOptions.py: fix mnemonics for filter

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/ExportVCard.py:
	* src/plugins/ExportCSV.py:
	* src/plugins/ExportVCalendar.py:
	* src/plugins/WriteFtree.py:
	* src/plugins/WriteGeneWeb.py:
	0001674: when exporting, filter dropdown menu has to 
	"Entire Database" entries

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* po/POTFILES.in:
	0001689: Text: Generato commadline plugin interface not localised

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* po/POTFILES.in:
	0001694: Descendant report -untranslated text

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/PluginUtils/_GuiOptions.py:
	* src/plugins/FamilyGroup.py:
	0001702: invoking family group reports crashes gramps

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_Endnotes.py:
	0001704: Det. anc. report - newline needed after endnote entries.

2008-02-02 Peter LAndgren <peter.talken@telia.com>
    * data/man/gramps.in.1: [ \-l] -> [ \-l ]
    * data/man/sv/gramps.in.1: Update, due to update of English gramps.

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Deleted - superceeded by GVRelGraph.py.

2008-02-02 Brian Matherly <brian@gramps-project.org>
	* src/plugins/WebCal.py: 